# hydrus-ai-tagger

./: .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  crates.nix  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  flake.nix  hydrus-ai-tagger.env
.gitea/workflows/: build.yml  build_and_release.yaml  ci.yaml  docker.yaml  push.yml  test.yml
.github/workflows/: build_and_release.yaml  cargo_semver_checks.yaml  check_msrv.yaml  ci.yaml  crate_type.yaml  docker.yaml  release.yaml  update_msrv.yaml
src/: cli.rs  interrogator.rs  main.rs  tagger.rs  utils.rs
