[package]
name = "hydrus-ai-tagger-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.3.0"
hydrus-api = { version = "0.10.2", features = ["rustls"] }
image = "0.25.2"
indexmap = "2.6.0"
ndarray = "0.16.1"
ort = "2.0.0-rc.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
