[package]
name = "hydrus-ai-tagger"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
repository = "https://git.dimlight.eu/konkrotte/hydrus-ai-tagger"
rust-version = "1.81.0"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive", "env"] }
console = "0.15.8"
csv = "1.3.0"
hydrus-api = { git = "https://git.dimlight.eu/konkrotte/hydrus-api-rs.git", branch = "develop", features = [
    "rustls",
] }
image = "0.25.2"
indexmap = { version = "2.6.0", features = ["rayon"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
log = "0.4.22"
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.6", features = ["cuda", "tensorrt"] }
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[features]
load-dynamic = ["ort/load-dynamic"]
